--- a/src/Assignment-6/assignment6.css
+++ b/src/Assignment-6/assignment6.css
@@ -1,7 +1,63 @@
 /* Our CSS file. */
-
-
 .container, .content {
 width: 100%;
 height: 100%;
+}
+html{
+    font-size: 15px;
+}
+body {
+    background: teal;
+    color: #222222;
+}
+
+#container{
+    width: 55%;
+    max-width: 60rem;
+    min-height: 20rem;
+    padding: 2rem;
+    margin: 2rem auto;
+    border-radius: 16px;
+    background: rgba(255,255,255,0.75);
+
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 2fr;
+}
+
+.form{
+    padding: 1rem;
+}
+
+.countInfo {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+textarea {
+    width: 100%;
+    min-height: 15rem;
+    border: 1px solid teal;
+    border-radius: .8rem;
+}
+
+.btn {
+    width: 100%;
+    margin-top: 1rem;
+    padding: 1rem;
+    font-size: large;
+    border: none;
+    border-radius: .8rem;
+    background: linear-gradient(#42cff2, #4a66f3);
+}
+
+.threadBox{
+    min-height: 7rem;
+    padding: 1rem;
+    background: #fdfdfd;
+    border-radius: .8rem;
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 }
